--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "dotenv": "^16.5.0",
     "lucide": "^0.487.0",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
