--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.8.4",
     "dotenv": "^16.5.0",
+    "framer-motion": "^12.16.0",
     "lucide": "^0.487.0",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
