--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
-    "react-meta-tags": "^1.0.1",
     "react-router-dom": "^7.5.0",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.1.7",
